font was not showing up on github pages, hopefully with this change that is solved.

--- a/_sass/minima-customized.scss
+++ b/_sass/minima-customized.scss
@@ -2,10 +2,6 @@
 
 
 
-@font-face {
-  font-family: "CMU Sans Serif";
-  src: "../248nonny.github.io/assets/fonts/cmu-ss.ttf";
-}
 
 // Define defaults for each variable.
 $base-font-family: "CMU Sans Serif",Verdana, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
