--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,3 +3,9 @@
 ---
 
 @import "minima-customized";
+
+
+@font-face {
+    font-family: "CMU Sans Serif";
+    src: url("../assets/fonts/cmu-ss.ttf");
+}
